tests/build/cases/ui_node/delegate_list_expr_error_incorrect_mut.stderr
error[E0596]: cannot borrow `*children` as mutable, as it is behind a `&` reference
 --> cases/ui_node/delegate_list_expr_error_incorrect_mut.rs:8:27
  |
8 | #[ui_node(delegate_list = &self.inner)]
  |                           ^ `children` is a `&` reference, so the data it refers to cannot be borrowed as mutable
  |
help: consider changing this to be a mutable reference
  |
8 | #[ui_node(delegate_list = &mut self.inner)]
  |                           ~~~~~~~~~~~~~~~
